--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,175 @@
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    background-color: #EFEDF2;
+}
+
 .App {
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title{
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    align-items: center;
+    background-image: linear-gradient(25deg , #313171,#7c53f7);
+    padding-bottom: 25px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.titleEditing{
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    align-items: center;
+    background-image: linear-gradient(25deg ,#1B183A,#4F3C95 );
+    padding-bottom: 25px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+h4 {
+    color: white;
+    font-size: 1.3rem;
+    font-weight: 400;
+    letter-spacing: 1.1px;
+}
+input {
+    border: none;
+    padding: 10px 25px;
+    margin-right: 5px;
+    margin-bottom: 25px;
+    border-radius: 50px;
+    background: none;
+    border: 1px solid rgba(255, 255, 255, 0.517);
+    color: white;
+    font-weight: 300;
+}
+input::placeholder {
+   color: rgb(167, 167, 167);
+}
+input:focus{
+    outline: none;
 }
 
-.App-link {
-  color: #61dafb;
+form{
+    display: flex;
+    flex-direction: column;
+    width: 90vw;
+    max-width: 500px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btnAdd {
+    background-color: #EF426F ;
+    color: white;
+    padding: 10px 25px;
+    border: none;
+    border-radius: 50px;
+    box-shadow: 0px 5px  #c4355b;
 }
+
+.btnAdd:hover {
+    background-image: linear-gradient(25deg , #d83963,#EF426F );
+    cursor: pointer;
+   
+}
+
+.btnAddEdit {
+    background-color: #299eff ;
+    color: white;
+    padding: 10px 25px;
+    border: none;
+    border-radius: 50px; 
+    box-shadow: 0px 5px  #207fcc;
+}
+/* MESSAJE */
+
+.message {
+    background-image: linear-gradient(25deg , #1B183A,#4F3C95 );
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    justify-content: space-around;
+    box-shadow: 0px 2px 10px #00000028;
+    
+}
+
+/* DIV TODO */
+
+
+.Todo {
+   
+    background-color:white;
+    border-radius: 50px;
+    margin: 25px 12px 15px 12px;
+    padding: 0px 20px;
+    box-shadow: 0px 4px 4px #75757523;
+    text-align: center;
+  
+}
+
+.TodoCompleted {
+    background-color:#E5E5E5;
+    color: rgb(95, 95, 95);
+    border-radius: 50px;
+    margin: 25px 12px 15px 12px;
+    padding: 0px 20px;
+    box-shadow: 0px 4px 4px #75757523;
+    text-decoration:line-through 2px;
+    opacity: 0.5;
+    text-align: center;
+}
+
+h3 {
+    font-weight: 500;
+    color: rgb(91, 91, 91);
+    
+}
+h5{
+    color: #d3d3d3;
+    font-weight: 300;
+    font-size: 1.1rem;
+}
+
+/* BUTONS IN TODO */
+
+.Butons-to-edit {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: stretch;
+   
+}
+
+
+.BtnEdit {
+    background-color: #909090 ;
+    color: white;
+    padding: 10px 25px;
+    border: none;
+    border-radius: 50px;
+    margin-right: 5px;
+}
+.BtnEdit:hover {
+    background-color: #299eff ;
+    cursor: pointer;
+}
+.BtnDelete {
+    background-color: #909090 ;
+    color: white;
+    padding: 10px 25px;
+    border: none;
+    border-radius: 50px;
+    margin-right: 12px;
+    
+}
+.BtnDelete:hover {
+    background-color: #FF4954 ;
+    cursor: pointer;
+}
+
+
